<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_report"
        android:textAppearance="@style/TextAppearance.GramaKhata.Title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_card"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/tv_report_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/daily_report_placeholder"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp" />
    </ScrollView>

    <Button
        android:id="@+id/btn_share_report"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_button_primary"
        android:text="@string/share_report"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>
